<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="client_package">com.penthera.virtuososdk.provider.sdkdemo</string>

    <string name="app_name">SDKDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="generic_problem">Failure</string>
    <string name="error_start_service">Fatal error: The service could not be started</string>
    <string name="error_blocked_reasons">Downloads blocked by following reasons: %1$s</string>
    <string name="error_login_details">Could not login to backplane. Please ensure url and userid are present.</string>

    <string name="license_fetch_success">Fetched license for asset id: %1$s</string>
    <string name="license_fetch_failure">License fetch failed for asset id: %1$s</string>

	<!-- Generic words -->
    <string name="add">Add</string>
    <string name="subscribe">Subscribe</string>	
    <string name="cancel">Cancel</string>	
    <string name="apply">Apply</string>	
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="nickname">Nickname</string>

	<!-- Screen names -->    
    <string name="about">About</string>
    <string name="inbox">Inbox</string>
    <string name="catalog">Catalog</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="settings">Settings</string>
    <string name="user_devices">Users Devices</string>

    <!-- Menu items -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="unregister">Unregister</string>

	<!-- Splash -->    
    <string name="welcome">WELCOME TO THE SDK Demo!</string>
    <string name="using">Virtuoso sample project</string>
    <string name="continue_string">Continue</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="user">USER:</string>
    <string name="url">URL:</string>
    <string name="group">GROUP:</string>
    <string name="reg_failure_title">Registration Failed</string>
    <string name="reg_failure_msg">Please check your internet connection</string>

    <!-- Permission reason dialog -->
    <string name="permission_dialog_reason">We need permission to write to the storage to save your video files to the location you requested. Without permission the app will not download any content for offline playback</string>
    <string name="permission_dialog_ok">Ok, let android ask me again</string>
    <string name="permission_dialog_no">I still don\'t want to!</string>

 	<!-- About -->
	<string name="client_version">Demo Version: %1$s</string>
	<string name="server_sdk_version">Server SDK Version: %1$s</string>
	<string name="android_sdk_version">Android SDK Version: %1$s</string>
	<string name="copyright">Copyright 2013 Penthera Partners Inc (www.penthera.com)</string>
	<string name="hosted">Some content in this application may be provided by and hosted by the Internet Archive (www.archive.org) </string>

	<!-- Inbox -->
    <string name="no_download">No items downloading or downloaded. Please select the catalog from main menu to begin downloading content.</string>
    <string name="item_icon">Item Icon</string>
    <string name="add_test_item">Add Test Item</string>
    <string name="queued">Queued</string>
    <string name="expired">Expired</string>
    <string name="downloaded">Downloaded</string>
	<string name="num_selected">%1$d selected</string>
	<string name="download_status">Status: </string>
	<string name="error_count">Error Count: </string>
	<string name="expiration">Expiration: </string>
	<string name="never">Never</string>
	<string name="other">Other</string>
    <string name="error_count_value">%1$d %2$s</string>
    <string name="no_retry">No more retry attempts</string>

	<!-- Menu CAB -->
	<string name="menu_delete">Delete</string>
	<string name="menu_reset">Reset</string>   
	<string name="long_press_cab">Long press items to open CAB cmds</string>
    <string name="menu_refresh_drm">Refresh DRM</string>
    <string name="menu_refresh_all_ads">Refresh all ads</string>


	<!-- Download -->
    <string name="device_disabled">Device Disabled</string>
    <string name="authorization_problem">Authorization Problem</string>

	<!-- Catalog -->
    <string name="clock">clock</string>
    <string name="shadow">Shadow</string>
    <string name="pending">pending</string>
    <string name="no_results">No results</string>

	<!-- Catalog Detail -->
    <string name="catalog_detail">Catalog Detail</string>
    <string name="watch_now">Watch Now</string>
    <string name="download">Download</string>
    <string name="refresh_ads">Refresh Ads</string>
    <string name="itempause">Pause Item</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_item">Delete Item?</string>	
    <string name="cannot_find_item">Cannot Find Item</string>
    <string name="expires">Expires: </string>
    <string name="available">Available: </string>
    <string name="always">Always</string>
    <string name="retries_exceeded">No further retries. Reset to try again</string>

    <!-- status in detail -->
    <string name="status_downloading">Downloading</string>
    <string name="status_downloaded">Downloaded</string>
    <string name="status_pending">Queued</string>
    <string name="status_expired">Expired</string>
    <string name="asset_status">File %1$s with %2$d errors, current state: %3$s</string>

	<string name="subscriptions">Subscriptions</string>

	<!-- Settings -->
    <string name="socket_timeout">Socket timeout</string>
    <string name="connection_timeout">Socket timeout</string>
    <string name="reset">Reset</string>
    <string name="fragment_progress_rate">Fragment Progress Rate</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="sync">Sync</string>
    
	<string name="delete">Delete</string>
	<string name="unknown">Engine Status Unknown</string>
    <string name ="request_permissions">Always Request Permissions</string>
    <string name="sdk_allowed_video_codec_hint">Allowed video codecs ex:(mp4a,ec3)</string>
    <string name="hide_notifications_pause">Hide notifications on pause</string>

	<!-- Acessibility: Descriptions of images -->
	<string name="content_desc_app_icon">Application Icon</string>
	<string name="content_desc_up">Up</string>
	<string name="content_desc_down">Down</string>
	
	<!-- Devices -->
	
	<string name="change_nickname">Change Nickname</string>
	<string name="empty_list">No Data</string>

    <!-- player -->
    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="retry">Retry</string>

    <string name="track_selection_title">Select tracks</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="selection_default_none">Default (none)</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_generic">Problem with playback, unclassified</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>


    <string name="mime_type_config_btn_label">Configure MIME settings</string>
    <string name="mime_type_reset_btn_label">Reset MIME settings</string>
    <string name="mime_type_help_label">MIME type values can be separated by commas or on separate lines.</string>

    <string-array name="mime_manifest_types">
        <item>Select a manifest type</item>
        <item>HLS</item>
        <item>HSS</item>
        <item>MPEG DASH</item>
        <item>ALL</item>
    </string-array>

    <string-array name="mime_segment_types">
        <item>Select a segment type</item>
        <item>Video</item>
        <item>Audio</item>
        <item>Text (CC or Subtitles)</item>
    </string-array>
    
</resources>
