<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/menu_login"
		android:showAsAction="never"
		android:title="@string/login"
		android:titleCondensed="@string/login"
		android:visible="true">
	</item>
    <item 
   		android:id="@+id/menu_logout" 
     	android:showAsAction="never" 
     	android:title="@string/logout" 
     	android:titleCondensed="@string/logout" 
     	android:visible="true">
    </item>
	<item
		android:id="@+id/menu_unregister"
		android:showAsAction="never"
		android:title="@string/unregister"
		android:titleCondensed="@string/unregister"
		android:visible="true">
	</item>

	<item
		android:id="@+id/menu_refresh_ads"
		android:showAsAction="never"
		android:title="@string/menu_refresh_all_ads"
		android:visible="true">
	</item>
</menu>
