<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"	
	android:layout_width="match_parent"	
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"	
		android:layout_height="wrap_content"
		android:minWidth="300dip"
		android:orientation="vertical">

		<TextView
			android:text="@string/permission_dialog_reason"
   		    android:layout_width="match_parent"
       		android:layout_height="wrap_content"
			android:layout_margin="25dp"
			android:textSize="16sp"/>

		<!-- Ok -->
		<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/btn_permission_ok"
			android:text="@string/permission_dialog_ok"/>
		
		<!-- Cancel -->
		<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/btn_permission_no"
			android:text="@string/permission_dialog_no"/>

 	</LinearLayout>
</ScrollView>