<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"	
	android:layout_width="match_parent"	
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"	
		android:layout_height="wrap_content"
		android:minWidth="300dip"
		android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"	
				android:layout_height="wrap_content"
				android:minWidth="300dip"
				android:orientation="horizontal">
			
				<TextView
					android:text="@string/nickname"
        		    android:layout_width="0dip" 
            		android:layout_height="wrap_content"
					android:layout_weight="0"/> 
				<EditText 
					android:id="@+id/nickname"
        	    	android:layout_width="0dip" 
            		android:layout_height="wrap_content" 
        	    	android:layout_weight="1" />
				
			</LinearLayout>
		
		<!--  Apply -->
		<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/btn_apply"
			android:text="@string/apply"/>
			
		<!-- Cancel -->
		<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/btn_cancel"
			android:text="@string/cancel"/>

 	</LinearLayout>
</ScrollView>