<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"		
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="50dip"
			android:layout_height="50dip"
			android:id="@+id/img"
			android:layout_gravity="center_horizontal"
			android:gravity="center_horizontal"
			android:scaleType="fitXY" android:contentDescription="@string/item_icon" android:textIsSelectable="false"/>
	
		<TextView
			android:id="@+id/txt_title"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/padding_medium"
			android:textSize="13sp"
			android:singleLine="true"
			android:maxLines="1"
			android:ellipsize="end"
			android:layout_weight="1"
			android:textColor="#000000"
			android:textIsSelectable="false"/>

		<LinearLayout
			android:id="@+id/lyt_download_info"
			android:layout_width="wrap_content"
			android:layout_height="55dip"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/txt_state"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
				android:textColor="#000000"
				android:textIsSelectable="false"/>


			<FrameLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:gravity="center_vertical">

				<TextView
					android:id="@+id/pbv_txt"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:textSize="12sp"
					android:layout_gravity="center_vertical"
					android:gravity="center_vertical"
					android:paddingRight="@dimen/padding_small"
					android:textColor="#000000"
 					android:textIsSelectable="false"/>				
			</FrameLayout>		
		</LinearLayout>

		<LinearLayout
			android:id="@+id/lyt_download_info2"
			android:layout_width="wrap_content"
			android:layout_height="55dip"
			android:orientation="horizontal">
	
			<ImageButton
				android:id="@+id/btn_up"
				android:layout_width="50dip"
				android:layout_height="50dip"
				android:clickable="false"
				android:focusable="false"			
				android:src="@drawable/up" android:contentDescription="@string/content_desc_up"/>
	
			<ImageButton
				android:id="@+id/btn_down"
				android:layout_width="50dip"
				android:layout_height="50dip"
				android:clickable="false"
				android:focusable="false"
				android:src="@drawable/down" android:contentDescription="@string/content_desc_down"/>
		</LinearLayout>			
	</LinearLayout>

	<!-- Download Status -->
	<LinearLayout
		android:id="@+id/row_download_status"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:layout_marginLeft="5dip"
		android:orientation="horizontal">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:textColor="#FF000000"
			android:text="@string/download_status"/>

		<TextView
			android:id="@+id/txt_download_status"
 			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/row_text"
			android:layout_toRightOf="@+id/btn_container"
			android:textColor="#FF000000"
			android:layout_centerVertical="true"/>
	</LinearLayout>
	
	<!-- Error Count -->
	<LinearLayout
		android:id="@+id/row_error_count"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:layout_marginLeft="5dip"
		android:orientation="horizontal">        
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:textColor="#FF000000"
			android:text="@string/error_count"/>
		<TextView
			android:id="@+id/txt_error_count"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
			android:textColor="#FF000000"
 			android:gravity="center_vertical"/>
 	</LinearLayout>        

	<!-- Expiration -->
	<LinearLayout
		android:id="@+id/row_expiration"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dip"
		android:orientation="horizontal">        
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:textColor="#FF000000"
			android:text="@string/expiration"/>
		<TextView
			android:id="@+id/txt_expiration"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
			android:textColor="#FF000000"
 			android:gravity="center_vertical"/>
 	</LinearLayout>        
	
	<!-- Download Progress -->
	<ProgressBar 
		android:id="@+id/prg"
 		android:layout_width="match_parent"  
		android:layout_height="12dip"  
		
		android:layout_marginTop="@dimen/padding_large"
		android:layout_marginLeft="@dimen/padding_medium"
		android:layout_marginRight="@dimen/padding_medium"
		
		android:progress="0"  
		android:max="100"  
		style="?android:attr/progressBarStyleHorizontal"
   		android:visibility="gone"/>
</LinearLayout>
   		