<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:ignore="Overdraw" >

	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="0dip"
		android:layout_weight="1"
    	android:orientation="vertical">

	    <TextView
	    	android:id="@+id/txt_welcome"
		    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="@dimen/padding_extra_large"
    		android:layout_gravity="center_horizontal"
    		android:gravity="center_horizontal"
    		android:textStyle="bold"
    		android:textSize="26sp"
			android:text="@string/welcome"
			android:visibility="invisible"/>

	    <ImageView
		    android:layout_width="match_parent"
    		android:layout_height="0dip"
    		android:layout_weight="1"
    		android:layout_marginTop="@dimen/padding_medium"
    		android:layout_gravity="center_horizontal"
    		android:gravity="center_horizontal"
			android:src="@drawable/ic_launcher"/>

		<LinearLayout
			android:id="@+id/lyt_user"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:layout_marginLeft="@dimen/padding_small"
    		android:visibility="invisible">

		    <TextView
		    	android:id="@+id/txt_user"
			    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_gravity="center_vertical"
    			android:gravity="center_horizontal|center_vertical"
    			android:textSize="16sp"
				android:text="@string/user"/>

		    <EditText
		    	android:id="@+id/edt_user"
			    android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_margin="@dimen/padding_medium"
				android:src="@drawable/ic_launcher"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/lyt_url"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:layout_marginLeft="@dimen/padding_small"
    		android:visibility="invisible">
    		
		    <TextView
		    	android:id="@+id/txt_url"
			    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_gravity="center_vertical"
    			android:gravity="center_horizontal|center_vertical"
    			android:textSize="16sp"
				android:text="@string/url"/>

		    <EditText
		    	android:id="@+id/edt_url"
			    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_margin="@dimen/padding_medium"
				android:src="@drawable/ic_launcher"/>
		</LinearLayout>

	</LinearLayout>

    <Button
	  	android:id="@+id/btn_continue"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   		android:layout_gravity="center_horizontal"
   		android:gravity="center_horizontal|center_vertical"
  		android:layout_marginBottom="@dimen/padding_large"
	    android:paddingLeft="100dip"
	    android:paddingRight="100dip"
		android:text="@string/continue_string"
		android:textSize="24sp"
		android:onClick="onContinue"
		android:visibility="invisible"/>
</LinearLayout>